Update sheet name

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     });
 
                     let rowObject = XLSX.utils.sheet_to_row_object_array(
-                        workbook.Sheets["DECEMBER 20.12.23 MASTER"]
+                        workbook.Sheets["MASTER"]
                     );
                     jsonData = rowObject;
                     console.log(jsonData);
