--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <html>
     <head>
         <style>
-            .fs-12{
+            .td-thin {
+                padding: unset !important;
+            }
+            .fs-6p {
+                font-size: 6px;
+            }
+            .fs-12 {
                 font-size: 12px;
             }
-
+            .custom-table {
+                width: 49% !important;
+            }
             .border-dashed {
                 border-bottom: double 2px;
+            }
+            .content{
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: space-between;
             }
         </style>
         <script src="./jQuery.js"></script>
@@ -15,10 +29,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     </head>
     <body>
-        <input type="file" id="fileUpload" accept=".xls,.xlsx" /><br />
-        <button type="button" id="uploadExcel">Convert</button>
-        <pre id="jsonData"></pre>
-        <div id="content"></div>
+        <div style="display: flex;">
+            <input class="form-control" style="width: 20%;" type="file" id="fileUpload" accept=".xls,.xlsx" />
+            &nbsp;&nbsp;
+            <button type="button" id="uploadExcel" style="width: 20%;" class="btn btn-secondary col-md-2">Generate</button>
+        </div>
+        <div id="content" class="content"></div>
     </body>
     <script>
         var selectedFile;
@@ -61,8 +77,8 @@
                     var innerHtml = "";
                     map.forEach((v,k) => {
                         let doctor='';//`<h5>${k}</h5>`;
-                        innerHtml+=`<div>${doctor}
-                                    <table class="table table-striped fs-12">
+                        innerHtml+=`<div class="custom-table">${doctor}
+                                    <table class="table table-striped fs-6p">
                                         ${constructHeader(headings)}
                                         ${constructBody(headings, k, v)}
                                     </table>
@@ -78,7 +94,7 @@
         function constructHeader(headArray){
             let heads = "";
             headArray.forEach(r => {
-                heads += `<th scope="col">${r}</th>`;
+                heads += `<th class="td-thin" scope="col">${r}</th>`;
             });
             return `<thead>
                         <tr>
@@ -92,7 +108,7 @@
             data.forEach(r => {
                 body += '<tr>';
                 headings.forEach(h => {
-                    body += `<td>${r[h]}</td>`;
+                    body += `<td class="td-thin">${r[h]}</td>`;
                 });
                 body += '</tr>';
                 total += isNaN(r[" REF "]) ? 0 : parseFloat(r[" REF "]);
