Updated sub heading

--- a/pr-list.html
+++ b/pr-list.html
@@ -54,6 +54,8 @@
         <div style="display: flex;" id="upload">
             <input class="form-control" style="width: 20%;" type="file" id="fileUpload" accept=".xls,.xlsx" />
             &nbsp;&nbsp;
+            <input class="form-control" style="width: 20%;" type="input" id="sub-heading" placeholder="Enter Sub Heading" />
+            &nbsp;&nbsp;
             <button type="button" id="uploadExcel" style="width: 20%;" class="btn btn-secondary col-md-2">Generate</button>
         </div>
         <div id="content" class="content"></div>
@@ -133,7 +135,7 @@
                     
                     var innerHtml = "";
                     prMap.forEach((v,k) => {
-                        let doctor=`<span class="heading">${k}</span>`;
+                        let doctor=`<span class="heading">${k} (${document.getElementById("sub-heading").value})</span>`;
                         let body = constructBody(v);
                         if(body){
                             innerHtml+=`<div class="custom-table">${doctor}
