--- a/referal-list.html
+++ b/referal-list.html
@@ -144,6 +144,8 @@
                 headings.forEach(h => {
                     if(h == 'S.No'){
                         body += `<td class="td-thin"><b>${++sr}</b></td>`;
+                    }else if(h == ' REF '){
+                        body += `<td class="td-thin">${formatToCurrency(r[h].toString())}</td>`;
                     }else{
                         body += `<td class="td-thin">${r[h]}</td>`;
                     }
