added envelop print

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             <button type="button" id="referal-list" onclick="routeToPage(this.id)" class="btn btn-primary col-md-2">Generate Referal List</button>
             &nbsp;&nbsp;
             <button type="button" id="pr-list" onclick="routeToPage(this.id)" class="btn btn-primary col-md-2">Generate PR List</button>
+            &nbsp;&nbsp;
+            <button type="button" id="envelop-print" onclick="routeToPage(this.id)" class="btn btn-primary col-md-2">Envelop Prints</button>
         </div>
     </body>
     <script>
